traefik/templates/traefik-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute-dashboard-public
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: dashboard-redirect
      services:
        - name: api@internal
          kind: TraefikService
